style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  --navbar-bg-color: rgb(51, 51, 51);
  --skill-level-title: white;
  --hover-btm-border: white;
  --post-title: black;
  --contact-form-bg-color: rgb(51, 51, 51);
  --contact-form-border-clicked: blue;
  --contact-form-border: black;
  --about-me-title: rgba(0, 0, 255, 0.525);
}
html {
  scroll-behavior: smooth;
  /* max-width: 1444px; */
  margin-right: auto;
  margin-left: auto;
}
body {
  font-family: 'Poppins' 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
  background: rgb(255, 255, 255);
}
.bg-img {
  background-image: url(images/ufc\ pose.jpg);
  background-size: auto;
  background-repeat: space;
  height: 36vh;
  width: 100%;
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: white;
  border: 27px solid white;
}
.welcome-title {
  /* font-family: 'Sedgwick Ave Display', cursive; */
  font-family: 'Splash', cursive;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 50p;
  padding: 164px;
  color: black;
  animation: slogan 3s ease-out 1 both;
  font-size: 5rem;
  /* mix-blend-mode: lighten; */
}

@keyframes slogan {
  0% {
    color: rgba(255, 255, 255, 0);
  }
  15% {
    color: rgba(66, 66, 66);
  }
  20% {
    color: rgb(129, 129, 129);
  }
  25% {
    color: rgba(192, 192, 192);
  }
  50% {
    color: rgba(255, 255, 255);
  }
  75% {
    color: rgb(66, 66, 66);
  }
  80% {
    color: rgb(255, 255, 255);
  }
  90% {
    color: rgb(0, 0, 0);
  }
  95% {
    color: rgb(255, 255, 255);
  }
  97% {
    color: rgb(128, 128, 128);
  }

  100% {
    color: black;
  }
}
.blog-containers {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin: 80px auto;
  gap: 2em;
}
img {
  width: 400px;
  height: 340px;
}
nav {
  display: inline;
}

.navbar {
  min-height: 50px;
  display: flex;
  justify-content: center;
  padding: 0 24px;
  background: rgba(0, 0, 0, 0.8);
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 50px;
  align-items: center;
  flex-wrap: nowrap;
  flex-direction: row;
  top: 0;
  z-index: 2;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  z-index: 1;
  gap: 5rem;
}
#nav-menu-bg-color,
#hamburger-bg-color {
  background-color: rgba(0, 0, 0, 0.8);
}

.nav-menu a {
  text-decoration: none;
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  padding: 0.5rem;
  text-align: center;
  text-decoration: none;
  letter-spacing: 0.5px;
}
.nav-menu a::after {
  content: '';
  position: absolute;
  background-color: var(--hover-btm-border);
  height: 3px;
  width: 0;
  left: 0;
  bottom: 0px;

  transition: 0.3s;
}
.nav-menu a:hover {
  transition: 0.5s;
}
.nav-menu a:hover:after {
  width: 100%;
}

.nav-link {
  transition: 0.7s ease;
  color: white;
  text-decoration: none;
}

.nav-link:hover {
  border: 1px solid white;
  color: black;
  border-radius: 10px;
  padding: 5px;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: white;
}
/* HAMBURGER MENU MQ */
@media (max-width: 740px) {
  .hamburger {
    display: block;
  }
  /* used :nth-child() to target specific child elements based on their position */
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .nav-menu {
    position: fixed;
    left: -100%;
    top: 57px;
    gap: 0;
    flex-direction: column;
    background-color: #262626;
    width: 100%;
    text-align: center;
    transition: 0.3s;
  }

  .nav-item {
    margin: 16px 0;
  }

  .nav-menu.active {
    left: 0;
  }
}

/* Slideshow container */
.slideshow-container {
  max-width: 425px;
  position: relative;
  margin: auto;
}

/* first slide */

/* Hide the images by default */
.mySlides,
.mySlides-two,
.mySlides-three,
.mySlides-four {
  display: none;
  width: 300px;
  /* padding: 10px; */
}
.img-border {
  border-radius: 10px;
}
.img-zoom:hover,
.img-zoom:active {
  transition: transform 0.5s ease;
  transform: scale(1.1);
  z-index: 3;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  color: white;
  background-color: rgba(0, 0, 0, 0.8);
}

/* Caption text */
.text {
  color: var(--skill-level-title);
  font-size: 15px;
  padding: 12px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
  background: rgba(0, 0, 0, 0.8);

  bottom: 0;
  transition: 0.5s;
}
.fight-location-text {
  font-size: 2rem;
  color: white;
}

.class-name {
  color: var(--post-title);
  padding: 15px;
  font-size: 1.5rem;
}

/* Number text (1/3 etc) */
.img-title {
  color: var(--skill-level-title);
  /* background: rgb(51 51 51 / 75%); */
  background: rgb(0 0 0/ 0.8);
  border-radius: 10px;
  font-size: 16px;
  margin: 65px 0px 0px 10px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
  z-index: 2;
}

/* The dots/bullets/indicators */
.dot,
.dotsTwo,
.dotsThree,
.dotsFour {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active,
.dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}
/* ... */

